# rust-browser

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: helpers.rs  main.rs
src/client/: fetch_url.rs  fetcher.rs  mod.rs  page_part.rs  parser.rs  searxng.rs
src/config/: mod.rs  webclient_config.rs
src/state/: cursor.rs  input.rs  mod.rs  tab_state.rs  tabs.rs  term.rs  webclient_state.rs
src/ui/: err_term.rs  input.rs  mod.rs  page.rs  popup_term.rs  tabs.rs  top.rs
