[package]
name = "rust-browser"
version = "0.1.4"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
anyhow = "1.0.100"
crossterm = "0.29.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"
open = "5.3.3"
