[package]
name = "rust-browser"
version = "0.2.0"
edition = "2024"

[dependencies]
tui-input = "0.15.0"
ratatui = "0.30.0"
anyhow = "1.0.100"
crossterm = "0.29.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
open = "5.3.3"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
